--- a/cats/templates/cats/profile.html
+++ b/cats/templates/cats/profile.html
@@ -16,7 +16,8 @@
                             </form>
                         </div>
                         <div class="like-count">
-                            <span>{{ cat.like_count }} ♥</span>
+                            <span>{{ cat.like_count }}</span>
+                            <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
                 </div>
