--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link rel="stylesheet" href="{% static 'users/style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}" >
     <title>CatGram</title>
 </head>
 <body>
     <header>
         <div class="header">
-            <h1>CatGram</h1>
+                <a href="{% url 'home' %}" class="h">CatGram</a>
         </div>
     </header>
 
